# dashstack

./: .gitignore  CLAUDE.md  README.md  dashstack.py  pyproject.toml
gui/: Package.swift  README.md
gui/Sources/DashStack/: App.swift  ClipScanner.swift  DedupView.swift  JobSession.swift  LogConsole.swift  MainView.swift  Runner.swift  StackView.swift  Theme.swift  TransferView.swift
src/dashstack/: __init__.py  cli.py
